# Systemy-Operacyjne

./: .gitignore  README.md
1. Laboratorium/: README.md
1. Laboratorium/Zadania/debug/: b.txt
1. Laboratorium/debug/: CMakeLists.txt  a.txt  main.c
1. Laboratorium/files/: extremely-huge-file-2.txt  large-file-3.txt  medium-file-2.txt  medium-file-3.txt  small-file-2.txt
1. Laboratorium/input/: test-1.txt  test-2.txt  test-3.txt  test-4.txt
1. Laboratorium/zad1/: Makefile  libsysops.c  libsysops.h  mylib.c  mylib.h
1. Laboratorium/zad2/: Makefile  main.c  raport2.txt
1. Laboratorium/zad3a/: Makefile  raport3a.txt
1. Laboratorium/zad3b/: Makefile  raport3b.txt
2. Laboratorium/zad1/: Makefile  copy  main.c  pomiar_zad_1.txt
2. Laboratorium/zad1/debug/: CMakeLists.txt  main.c
2. Laboratorium/zad2/: Makefile  main.c  pomiar_zad_2.txt
2. Laboratorium/zad3/: Makefile  listdirstat  main.c
2. Laboratorium/zad3/debug/: CMakeLists.txt  main.c
3. Laboratorium/zad1/: Makefile  main.c
3. Laboratorium/zad2/: Makefile  main.c  pomiar_zad_2.txt
3. Laboratorium/zad3/: Makefile  main.c
4. Laboratorium/: README.md
4. Laboratorium/zad1/: Makefile  exec  exec.c  fork  fork.c  raport1.txt
4. Laboratorium/zad2/: Makefile  main.c
4. Laboratorium/zad3a/: Makefile  catcher.c  sender.c
4. Laboratorium/zad3b/: Makefile  catcher.c  sender.c
5. Laboratorium/: README.md
5. Laboratorium/zad1/: commands.txt  main  main.c
5. Laboratorium/zad2/: main.c
5. Laboratorium/zad3/: Makefile  consumer.c  main.c  producer.c
6. Laboratorium/: README.md
6. Laboratorium/zad1/: client.c  headers.h  logs.txt  server.c
6. Laboratorium/zad2/: Makefile  client.c  logs.txt
laboratoria/10. Laboratorium/: README.md
laboratoria/10. Laboratorium/zad2/: CMakeLists.txt  Makefile  client.c  client.h  server.c  server.h
laboratoria/10. Laboratorium/zad2/lib/: Makefile  libcommon.h  libcprint.c  libcprint.h
laboratoria/2. Laboratorium/: README.md
laboratoria/3. Laboratorium/: README.md
laboratoria/5. Laboratorium/: README.md
laboratoria/7. Laboratorium/: README.md  wnioski.txt
laboratoria/8. Laboratorium/: README.md
laboratoria/9. Laboratorium/: README.md
laboratoria/9. Laboratorium/zad1/: CMakeLists.txt  Makefile  main.c
laboratoria/9. Laboratorium/zad1/characters/: common.c  common.h  elf.c  elf.h  reindeer.c  reindeer.h  santa.c  santa.h
laboratoria/9. Laboratorium/zad1/lib/: Makefile  libcommon.c  libprint.c  libprint.h  librandom.c  librandom.h
(+159 files in other folders)
